# file_encryption_tool

./: Cargo.toml  README.md
src/: errors.rs  main.rs  utils.rs
src/cli/: password_strength.rs  progress.rs  prompt.rs
src/config/: settings.rs
src/crypto/: aes.rs  compression.rs  file_io.rs  integrity.rs  keyfile.rs  mod.rs  shred.rs
